--- a/templates/eventos/index.html.twig
+++ b/templates/eventos/index.html.twig
@@ -4,6 +4,8 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">Listado de Eventos</h1>
 
+        <a href="{{ path('app_eventos_nuevo') }}" class="btn btn-secondary">Nuevo Evento</a>
+
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
