--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,12 @@
         {% endblock %}
     </head>
     <body>
+        {% if app.user %}
+            <div class="mb-3">
+                <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
